# kaffe

./: .gitignore  Cargo.toml  README.md
.github/: codecov.yml
.github/workflows/: check.yml  test.yml
benches/: matmul_benchmark.rs  matrix_ops_benches.rs
examples/: determinant.rs  matmul.rs  matrix.rs  tensor.rs
src/: constants.rs  lib.rs  main.rs  matrix.rs
src/matrix/: determinant_helpers.rs  mod.rs
src/nn/: activation.rs  activations.rs  dataloader.rs  dataset.rs  loss.rs  losses.rs  mod.rs  optimizer.rs  pooling.rs  transform.rs
src/tensor/: mod.rs  tensorerror.rs
tests/: matrix.rs  nn.rs  tensor.rs
