[package]
name = "kaffe"
version = "0.1.0"
edition = "2021"
authors = ["Joergen Aleksander Fagervik <jorgenafagervik@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Pytorch, but make it rust :)"
repository = "https://github.com/Jafagervik/latte.git"

keywords = ["ai","matrix", "linear algebra", "tensorflow", "pytorch", "numpy"]
categories = ["matrix", "ai"]


[dependencies]
anyhow = "1.0.71"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]

