[package]
name = "kaffe"
version = "0.1.3"
edition = "2021"
authors = ["Joergen Aleksander Fagervik <jorgenafagervik@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Pytorch, but make it rust :)"
repository = "https://github.com/Jafagervik/latte.git"

keywords = ["ai","matrix", "tensorflow", "pytorch", "numpy"]
categories = ["mathematics", "science"]


[dependencies]
anyhow = "1.0.71"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matmul_benchmark"
harness = false
