[package]
name = "kaffe"
version = "0.2.1"
edition = "2021"
authors = ["Joergen Aleksander Fagervik <jorgenafagervik@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Pytorch, but make it rust :)"
repository = "https://github.com/Jafagervik/latte.git"

keywords = ["ai","matrix", "tensorflow", "pytorch", "numpy"]
categories = ["mathematics", "science"]


[dependencies]
anyhow = "1.0.71"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matmul_benchmark"
harness = false


[[bench]]
name = "matrix_ops_benches"
harness = false
